# consensus-sharding

./: .env  Cargo.toml
docker/: Dockerfile-router  Dockerfile-shard  README.md  docker-compose.yml
docs/: README.md
metrics/: README.md  grafana-dashboard.json  prometheus.yml
router/: README.md  requirements.txt  router.py  utils.py
scripts/: README.md  deploy_docker.sh  load_test_transactions.py  run_local_test.sh
shard-config/: README.md  shard1-config.json  shard2-config.json  shard3-config.json
src/: README.md  main.rs
tests/: README.md
